Se agregan las paginas de materias

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Mis cursos</h1>
+        <h1>Home</h1>
         <nav>
             <ul>
                 <li>Home</li>
@@ -20,6 +20,7 @@
     </header>
     <main>
         <section>
+            <h1>Mis cursos</h1>
             <table>
                 <thead>
                     <tr>
@@ -36,35 +37,35 @@
                         <td>Lunes</td>
                         <td>18:30 a 20:30</td>
                         <td>LEONARDO JAVIER PRIETO</td>
-                        <td><a href="https://virtualbsp.uade.edu.ar/d2l/home/43184">✅</a></td>
+                        <td><a href="https://virtualbsp.uade.edu.ar/d2l/home/43184" target="_blank">✅</a></td>
                     </tr>
                     <tr>
                         <td>Sistemas de Información I (12965)</td>
                         <td>Martes</td>
                         <td>18:30 a 20:30</td>
                         <td>MARCELO DANIEL TADEY</td>
-                        <td><a href="https://virtualbsp.uade.edu.ar/d2l/home/43524">✅</a></td>
+                        <td><a href="https://virtualbsp.uade.edu.ar/d2l/home/43524" target="_blank">✅</a></td>
                     </tr>
                     <tr>
                         <td>Fundamentos de Informática (12106)</td>
                         <td>Miercoles</td>
                         <td>18:30 a 21:30</td>
                         <td>GUILLERMO RAMIRO MAQUIEIRA</td>
-                        <td><a href="https://virtualbsp.uade.edu.ar/d2l/home/43184">✅</a></td>
+                        <td><a href="https://virtualbsp.uade.edu.ar/d2l/home/43184" target="_blank">✅</a></td>
                     </tr>
                     <tr>
                         <td>Marketing (16791)</td>
                         <td>Jueves</td>
                         <td>18:30 a 20:30</td>
                         <td>MONICA VIVIANA</td>
-                        <td><a href="https://virtualbsp.uade.edu.ar/d2l/home/43605">✅</a></td>
+                        <td><a href="https://virtualbsp.uade.edu.ar/d2l/home/43605" target="_blank">✅</a></td>
                     </tr>
                     <tr>
                         <td>Diseño y Desarrollo Web (15130)</td>
                         <td>Viernes</td>
                         <td>18:30 a 20:30</td>
                         <td>PATRICIA CARINA LITOVICIUS</td>
-                        <td><a href="https://virtualbsp.uade.edu.ar/d2l/home/43569">✅</a></td>
+                        <td><a href="https://virtualbsp.uade.edu.ar/d2l/home/43569" target="_blank">✅</a></td>
                     </tr>
                 </tbody>
             </table>
