--- a/contacto.html
+++ b/contacto.html
@@ -10,17 +10,35 @@
         <h1>Contacto</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="avisos.html">Avisos</a></li>
-                <li><a href="about.html">Sobre mi</a></li>
-                <li><a href="materias.html">Materias</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/avisos.html">Avisos</a></li>
+                <li><a href="/about.html">Sobre mi</a></li>
+                <li><a href="/materias.html">Materias</a></li>
                 <li>Contacto</li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
+            <h2>Contactarme por mail</h2>
 
+            <form action="" method="">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+                <br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <br>
+                <br>
+                <label for="asunto">Asunto:</label>
+                <input type="text" id="asunto" name="asunto" required>
+                <br>
+                <label for="consulta">Consulta:</label>
+                <textarea id="consulta" name="consulta" required></textarea>
+                <br>
+                <br>
+                <button type="submit">Enviar</button>
+            </form>
         </section>
     </main>
     <footer>
