--- a/materias/materiamarketing.html
+++ b/materias/materiamarketing.html
@@ -13,7 +13,7 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/avisos.html">Avisos</a></li>
                 <li><a href="/about.html">Sobre mi</a></li>
-                <li>Materias</li>
+                <li><a href="/materias.html">Materias</a></li>
                 <li><a href="/contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -26,12 +26,44 @@
                     <li><a href="/materias/materiaArquitecturacomputadoras.html">Arquitectura de Computadores (1004)</a></li>
                     <li><a href="/materias/materiasistemainformacion.html">Sistemas de Información I (12965)</a></li>
                     <li><a href="/materias/materiafundamentosinformatica.html">Fundamentos de Informática (12106)</a></li>
-                    <li><a href="/materias/materiamarketing.html">Marketing (16791)</a></li>
+                    <li>Marketing (16791)</li>
                     <li><a href="/materias/materiadisenioweb.html">Diseño y Desarrollo Web (15130)</a></li>
                 </ul>
             </nav>
+            <div>
+                <h2>Marketing (16791)</h2>
+            </div>
         </div>
-        <section>   
+        <section>
+            <h3><u>Actividades UVAs</u></h3>
+            <article>
+                <h4>UVA 1</h4>
+                <ol>
+                    <li>pendiente</li>
+                </ol>
+            </article>
+        </section>
+        <section>
+            <h3><u>Fechas de examenes</u></h3>
+            <article>
+                <ol>
+                    <li>pendiente</li>
+                </ol>
+            </article>
+            <div>
+                <a href="" target="_blank">Cronograma Marketing</a>
+            </div>
+        </section>
+        <section>
+            <h3><u>Bibliografías</u></h3>
+            <h4>UVA 1</h4>
+            <ul>
+                <li>pendiente</li>
+            </ul>
+            <h4>UVA 1</h4>
+        <div>
+            <a href="https://biblioteca.uade.edu.ar/client/es_ES/biblioteca" target="_blank">Biblioteca UADE</a> 
+        </div>                
         </section>
     </main>
     <footer>
