--- a/materiaarquitecturacomputadoras.html
+++ b/materiaarquitecturacomputadoras.html
@@ -23,15 +23,15 @@
             <h2>Lista de materias 2025 1er cuatrimestre</h2>
             <nav>
                 <ul>
-                    <li><a href="materiaArquitecturacomputadoras.html">Arquitectura de Computadores (1004)</a></li>
-                    <li>Sistemas de Información I (12965)</li>
+                    <li>Arquitectura de Computadores (1004)</li>
+                    <li><a href="materiasistemainformacion.html">Sistemas de Información I (12965)</a></li>
                     <li><a href="materiafundamentosinformatica.html">Fundamentos de Informática (12106)</a></li>
                     <li><a href="materiamarketing.html">Marketing (16791)</a></li>
                     <li><a href="materiadisenioweb.html">Diseño y Desarrollo Web (15130)</a></li>
                 </ul>
             </nav>
             <div>
-                <h2>Sistemas de Información I (12965)</h2>
+                <h2>Arquitectura de Computadores (1004)</h2>
             </div>
         </div>
         <section>
@@ -51,7 +51,7 @@
                 </ol>
             </article>
             <div>
-                <a href="" target="_blank">Cronograma Sistemas de Información I</a>
+                <a href="" target="_blank">Cronograma Arquitectura de Computadores</a>
             </div>
         </section>
         <section>
