--- a/materiamarketing.html
+++ b/materiamarketing.html
@@ -23,11 +23,11 @@
             <h2>Lista de materias 2025 1er cuatrimestre</h2>
             <nav>
                 <ul>
-                    <li><a href="/materiaArquitecturacomputadoras.html">Arquitectura de Computadores (1004)</a></li>
-                    <li><a href="/materiasistemainformacion.html">Sistemas de Información I (12965)</a></li>
-                    <li><a href="/materiafundamentosinformatica.html">Fundamentos de Informática (12106)</a></li>
-                    <li><a href="/materiamarketing.html">Marketing (16791)</a></li>
-                    <li><a href="/materiadisenioweb.html">Diseño y Desarrollo Web (15130)</a></li>
+                    <li><a href="materiaArquitecturacomputadoras.html">Arquitectura de Computadores (1004)</a></li>
+                    <li><a href="materiasistemainformacion.html">Sistemas de Información I (12965)</a></li>
+                    <li><a href="materiafundamentosinformatica.html">Fundamentos de Informática (12106)</a></li>
+                    <li>Marketing (16791)</li>
+                    <li><a href="materiadisenioweb.html">Diseño y Desarrollo Web (15130)</a></li>
                 </ul>
             </nav>
             <div>
