--- a/materias.html
+++ b/materias.html
@@ -10,11 +10,11 @@
         <h1>Materias 2025</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/avisos.html">Avisos</a></li>
-                <li><a href="/about.html">Sobre mi</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="avisos.html">Avisos</a></li>
+                <li><a href="about.html">Sobre mi</a></li>
                 <li>Materias</li>
-                <li><a href="/contacto.html">Contacto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -23,11 +23,11 @@
             <h2>Lista de materias 2025 1er cuatrimestre</h2>
             <nav>
                 <ul>
-                    <li><a href="/materias/materiaArquitecturacomputadoras.html">Arquitectura de Computadores (1004)</a></li>
-                    <li><a href="/materias/materiasistemainformacion.html">Sistemas de Información I (12965)</a></li>
-                    <li><a href="/materias/materiafundamentosinformatica.html">Fundamentos de Informática (12106)</a></li>
-                    <li><a href="/materias/materiamarketing.html">Marketing (16791)</a></li>
-                    <li><a href="/materias/materiadisenioweb.html">Diseño y Desarrollo Web (15130)</a></li>
+                    <li><a href="materiaArquitecturacomputadoras.html">Arquitectura de Computadores (1004)</a></li>
+                    <li><a href="materiasistemainformacion.html">Sistemas de Información I (12965)</a></li>
+                    <li><a href="materiafundamentosinformatica.html">Fundamentos de Informática (12106)</a></li>
+                    <li><a href="materiamarketing.html">Marketing (16791)</a></li>
+                    <li><a href="materiadisenioweb.html">Diseño y Desarrollo Web (15130)</a></li>
                 </ul>
             </nav>
         </div>
