--- a/about.html
+++ b/about.html
@@ -10,17 +10,17 @@
         <h1>Sobre mi</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/avisos.html">Avisos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="avisos.html">Avisos</a></li>
                 <li>Sobre mi</li>
-                <li><a href="/materias.html">Materias</a></li>
-                <li><a href="/contacto.html">Contacto</a></li>
+                <li><a href="materias.html">Materias</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div>
-            <img src="/img/imagen.jpg" alt="imagen"  width="300" height="300" >
+            <img src="img/imagen.jpg" alt="foto"  width="300" height="300" >
         </div>
         <section>
             <article>
