--- a/avisos.html
+++ b/avisos.html
@@ -10,11 +10,11 @@
         <h1>Avisos</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li>Avisos</li>
-                <li><a href="/about.html">Sobre mi</a></li>
-                <li><a href="/materias.html">Materias</a></li>
-                <li><a href="/contacto.html">Contacto</a></li>
+                <li><a href="about.html">Sobre mi</a></li>
+                <li><a href="materias.html">Materias</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
