--- a/contacto.html
+++ b/contacto.html
@@ -10,10 +10,10 @@
         <h1>Contacto</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/avisos.html">Avisos</a></li>
-                <li><a href="/about.html">Sobre mi</a></li>
-                <li><a href="/materias.html">Materias</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="avisos.html">Avisos</a></li>
+                <li><a href="about.html">Sobre mi</a></li>
+                <li><a href="materias.html">Materias</a></li>
                 <li>Contacto</li>
             </ul>
         </nav>
