--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <nav>
             <ul>
                 <li>Home</li>
-                <li><a href="/avisos.html">Avisos</a></li>
-                <li><a href="/about.html">Sobre mi</a></li>
-                <li><a href="/materias.html">Materias</a></li>
-                <li><a href="/contacto.html">Contacto</a></li>
+                <li><a href="avisos.html">Avisos</a></li>
+                <li><a href="about.html">Sobre mi</a></li>
+                <li><a href="materias.html">Materias</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
