--- a/materiadisenioweb.html
+++ b/materiadisenioweb.html
@@ -23,10 +23,10 @@
             <h2>Lista de materias 2025 1er cuatrimestre</h2>
             <nav>
                 <ul>
-                    <li><a href="/materiaArquitecturacomputadoras.html">Arquitectura de Computadores (1004)</a></li>
-                    <li><a href="/materiasistemainformacion.html">Sistemas de Información I (12965)</a></li>
-                    <li><a href="/materiafundamentosinformatica.html">Fundamentos de Informática (12106)</a></li>
-                    <li><a href="/materiamarketing.html">Marketing (16791)</a></li>
+                    <li><a href="materiaArquitecturacomputadoras.html">Arquitectura de Computadores (1004)</a></li>
+                    <li><a href="materiasistemainformacion.html">Sistemas de Información I (12965)</a></li>
+                    <li><a href="materiafundamentosinformatica.html">Fundamentos de Informática (12106)</a></li>
+                    <li><a href="materiamarketing.html">Marketing (16791)</a></li>
                     <li>Diseño y Desarrollo Web (15130)</li>
                 </ul>
             </nav>
