--- a/materiadisenioweb.html
+++ b/materiadisenioweb.html
@@ -32,6 +32,7 @@
             </nav>
             <div>
                 <h2>Diseño y Desarrollo Web (15130)</h2>
+                <a href="https://virtualbsp.uade.edu.ar/d2l/home/43569">Link al brightspace de la materia</a>
             </div>
         </div>
         <section>
