--- a/materiaarquitecturacomputadoras.html
+++ b/materiaarquitecturacomputadoras.html
@@ -32,6 +32,7 @@
             </nav>
             <div>
                 <h2>Arquitectura de Computadores (1004)</h2>
+                <a href="https://virtualbsp.uade.edu.ar/d2l/home/43184" target="_blank">Link al brightspace de la materia</a>
             </div>
         </div>
         <section>
