--- a/materiafundamentosinformatica.html
+++ b/materiafundamentosinformatica.html
@@ -32,6 +32,7 @@
             </nav>
             <div>
                 <h2>Fundamentos de Informática (12106)</h2>
+                <a href="https://virtualbsp.uade.edu.ar/d2l/home/43401" target="_blank">Link al brightspace de la materia</a>
             </div>
         </div>
         <section>
