--- a/materiamarketing.html
+++ b/materiamarketing.html
@@ -32,6 +32,7 @@
             </nav>
             <div>
                 <h2>Marketing (16791)</h2>
+                <a href="https://virtualbsp.uade.edu.ar/d2l/home/43605" target="_blank">Link al brightspace de la materia</a>
             </div>
         </div>
         <section>
